        the maximum for the format specifier.  For '%d', the limit is
        intmax ('int64') and for '%u' it is intmax ('uint64').

      * round(x) != x or the value is outside the range allowed by the
        integer format specifier.

    There is still one difference:  Matlab switches to '%e' and Octave
    switches to '%g'.

 ** The archive family of functions (bzip2, gzip, zip, tar) and their
    unpacking routines (bunzip2, gunzip, unzip, untar, unpack) have
    been recoded.  Excepting unpack, the default is now to place files
    in the same directory as the archive (on unpack) or as the original
    files (on archiving).

 ** Qt and FLTK graphics toolkits now support offscreen rendering on Linux.
    In other words, print will work even when the figure visibility is "off".

 ** Z-order stacking issues with patches, grid lines, and line object
    plot markers for on screen display and printing have all been resolved.
    For 2-D plots the axis grid lines can be placed on top of the plot
    with set (gca, "layer", "top").

 ** The patch graphic object has been overhauled.  It now produces visual
    results equivalent to Matlab even for esoteric combinations of
    faces/vertices/cdata.

 ** The polar() plot function now draws a circular theta axis and
    radial rho axis rather than using a rectangular x/y axis.

 ** linkprop has been completely re-coded for performance and Matlab
    compatibility.  It now returns a linkprop object which must be stored
    in a variable for as long as the graphic objects should remain linked.
    To unlink properties use 'clear hlink' where hlink is the variable
    containing the linkprop object.

 ** isprime has been extended to operate on negative and complex inputs.

 ** xor has been extended to accept more than two arguments in which case
    it performs cumulative XOR reduction.

 ** The following functions now support N-dimensional arrays:

      fliplr   flipud   rot90
